--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
