add music interface

--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@nextui-org/image": "^2.0.27",
     "@nextui-org/listbox": "^2.1.19",
     "@nextui-org/react": "^2.3.6",
+    "@nextui-org/slider": "^2.2.11",
     "@nextui-org/spinner": "^2.0.28",
     "@nextui-org/switch": "^2.0.28",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "react": "^18",
