--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.4",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
