--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@nextui-org/card": "^2.0.28",
     "@nextui-org/image": "^2.0.27",
     "@nextui-org/listbox": "^2.1.19",
+    "@nextui-org/modal": "^2.0.35",
     "@nextui-org/react": "^2.3.6",
     "@nextui-org/slider": "^2.2.11",
     "@nextui-org/spinner": "^2.0.28",
     "@nextui-org/switch": "^2.0.28",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.2.4",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
