--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/avatar": "^2.0.27",
     "@nextui-org/card": "^2.0.28",
     "@nextui-org/image": "^2.0.27",
+    "@nextui-org/input": "^2.2.1",
     "@nextui-org/listbox": "^2.1.19",
     "@nextui-org/modal": "^2.0.35",
     "@nextui-org/react": "^2.3.6",
