--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@nextui-org/spinner": "^2.0.28",
     "@nextui-org/switch": "^2.0.28",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
     "firebase": "^10.12.2",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.2.12",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "nanoid": "^5.0.7",
@@ -39,7 +40,8 @@
     "react-dom": "^18",
     "react-simple-typewriter": "^5.0.1",
     "sharp": "^0.33.4",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
