--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-metatags-hook": "^2.0.0",
     "react-simple-typewriter": "^5.0.1",
     "sharp": "^0.33.4",
     "styled-components": "^6.1.11",
